[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to implement PINT asset index.'
edition = '2018'
license = 'LGPL-3.0-only'
name = 'pallet-asset-index'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }

# Substrate Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }

# Polkadot Dependencies
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8', default-features = false }

# PINT dependencies
pallet-chainlink-feed = { git = "https://github.com/ChainSafe/chainlink-polkadot", branch = "upgrade-substrate-master", default-features = false, optional = true }
pallet-price-feed = { path = "../price-feed", default-features = false }
primitives = { path = "../../primitives/primitives", default-features = false }

# ORML Dependencies
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }

[dev-dependencies]
serde = { version = "1.0.124" }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-price-feed/std',
    'primitives/std',
    'xcm/std',
    'xcm-executor/std',

    'orml-traits/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'pallet-price-feed/runtime-benchmarks',
    'pallet-chainlink-feed/runtime-benchmarks',
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
