[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to implement PINT asset index.'
edition = '2018'
license = 'LGPL-3.0-only'
name = 'pallet-asset-index'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
serde = { version = "1.0.101", features = ["derive"], optional = true }

# Substrate Dependencies
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8', default-features = false }
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8', default-features = false }

# PINT dependencies
pallet-chainlink-feed = { git = "https://github.com/ChainSafe/chainlink-polkadot", branch = "upgrade-substrate-master", default-features = false, optional = true }
pallet-price-feed = { path = "../price-feed", default-features = false }
primitives = { path = "../../primitives/primitives", default-features = false }

# ORML Dependencies
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }

[dev-dependencies]
serde = { version = "1.0.124" }

sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

pallet-saft-registry = { path = "../saft-registry" }

orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
rand = "0.8.4"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-core/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-price-feed/std',
    'primitives/std',

    'polkadot-parachain/std',
    'xcm/std',
    'xcm-executor/std',

    'orml-traits/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'pallet-price-feed/runtime-benchmarks',
    'pallet-chainlink-feed/runtime-benchmarks',
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
