[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to implement PINT asset index.'
edition = '2021'
license = 'LGPL-3.0-only'
name = 'pallet-asset-index'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.2'

[dependencies]
serde = { version = "1.0.132", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate Dependencies
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26', default-features = false, optional = true }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.26', default-features = false }
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.26', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.26', default-features = false }

# PINT dependencies
pallet-price-feed = { path = "../price-feed", default-features = false }
primitives = { path = "../../primitives/primitives", default-features = false }

# ORML Dependencies
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'polkadot-v0.9.26', default-features = false }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'polkadot-v0.9.26', default-features = false }

[dev-dependencies]
serde = "1.0.132"

sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26' }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26' }

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.26' }

pallet-saft-registry = { path = "../saft-registry" }

rand = "0.8.4"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'scale-info/std',
    'sp-core/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-price-feed/std',
    'primitives/std',

    'polkadot-parachain/std',
    'xcm/std',
    'xcm-executor/std',

    'orml-traits/std',
    'orml-tokens/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'pallet-price-feed/runtime-benchmarks',
    'primitives/runtime-benchmarks',
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
