[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to implement PINT committee.'
edition = '2021'
license = 'LGPL-3.0-only'
name = 'pallet-committee'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.2'

[dependencies]
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
log = { version = "0.4.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false, optional = true }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

[features]
default = ['std']
std = [
    'log/std',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
