[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to implement PINT price feeds.'
edition = '2018'
license = 'LGPL-3.0-only'
name = 'pallet-price-feed'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# Substrate Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false, optional = true }

# PINT dependencies
pallet-chainlink-feed = { git = 'https://github.com/smartcontractkit/chainlink-polkadot', branch = 'polkadot-v0.9.13', default-features = false }
primitives = { path = "../../primitives/primitives", default-features = false }

[dev-dependencies]
serde = "1.0.130"
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.13' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-chainlink-feed/std',
    'primitives/std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'pallet-chainlink-feed/runtime-benchmarks',
    'primitives/runtime-benchmarks',
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
