[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to bond/unbond and transfer assets on other chains.'
edition = '2018'
license = 'LGPL-3.0-only'
name = 'pallet-remote-asset-manager'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.101", features = ["derive"], optional = true }
codec = { package = 'parity-scale-codec', version = '2.2.0', default-features = false, features = ['derive', 'max-encoded-len']}

# Substrate Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false, optional = true }
pallet-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }

# Polkadot Dependencies
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.10', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.10', default-features = false }

# Cumulus dependencies
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.10', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.10', default-features = false }

# PINT dependencies
xcm-calls = {path = "../../primitives/xcm-calls", default-features = false }
primitives = { path = "../../primitives/primitives", default-features = false }

# orml Dependencies
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }
orml-xtokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }

[dev-dependencies]
serde = { version = "1.0.101", features = ["derive"] }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }


## Substrate Pallet Dependencies
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-proxy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10'}
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pallet-collective = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }

# cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.10" }

# polkadot
xcm-builder = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.10' }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.10" }

# PINT
pallet-asset-index = {path = "../asset-index" }
pallet-saft-registry = {path = "../saft-registry" }
pallet-price-feed = { path = "../price-feed" }

# ORML
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-unknown-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-xcm-support = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'log/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-staking/std',
    'xcm/std',

    'xcm-calls/std',
    'primitives/std',

    'xcm-executor/std',
    'cumulus-pallet-xcm/std',
    'cumulus-primitives-core/std',

    'orml-traits/std',
    'orml-xtokens/std',
]
# this feature is only for compilation now
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'primitives/runtime-benchmarks',
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']