[package]
authors = ['ChainSafe Systems']
description = 'FRAME pallet to bond/unbond and transfer assets on other chains.'
edition = '2021'
license = 'LGPL-3.0-only'
name = 'pallet-remote-asset-manager'
readme = 'README.md'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.101", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# Substrate Dependencies
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false, optional = true }
pallet-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12', default-features = false }

# Polkadot Dependencies
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.12', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.12', default-features = false }

# Cumulus dependencies
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.12', default-features = false }

# PINT dependencies
xcm-calls = {path = "../../primitives/xcm-calls", default-features = false }
primitives = { path = "../../primitives/primitives", default-features = false }

# orml Dependencies
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }
orml-xtokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }

[dev-dependencies]
serde = { version = "1.0.101", features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-election-provider-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }


## Substrate Pallet Dependencies
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-staking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-proxy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12'}
pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-collective = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

# cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.12" }

# polkadot
xcm-builder = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.12' }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.12" }

# PINT
pallet-asset-index = {path = "../asset-index" }
pallet-saft-registry = {path = "../saft-registry" }
pallet-price-feed = { path = "../price-feed" }

# ORML
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-unknown-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }
orml-xcm-support = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'log/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-staking/std',
    'xcm/std',

    'xcm-calls/std',
    'primitives/std',

    'xcm-executor/std',
    'cumulus-pallet-xcm/std',
    'cumulus-primitives-core/std',

    'orml-traits/std',
    'orml-xtokens/std',
]
# this feature is only for compilation now
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'primitives/runtime-benchmarks',
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']